# electron-typescript-starter-dev

./: .eslintignore  .eslintrc  .gitignore  .prettierrc.js  README.md  package-lock.json  package.json  tsconfig.json  tslint.json
native/: CMakeLists.txt
native/src/: app_core.cc
nativelib/app_core/: app_core.node  index.d.ts  index.js  package.json
scripts/: update-native-lib.js
src/: global.d.ts  main.ts
src/electron/: app-entry.ts
src/main/: global.d.ts  main.ts
src/main/electron/: app-entry.ts  events.ts  preload.ts
src/main/electron/common/: settings.ts
src/main/electron/preload/: sdk.ts  settings.ts
src/main/utils/: config.ts  debug.ts
src/renderer/: global.d.ts  main.ts
src/utils/: config.ts  debug.ts
